--- a/RestaurantAPI/RestaurantAPI/Properties/launchSettings.json
+++ b/RestaurantAPI/RestaurantAPI/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "RestaurantAPI": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "weatherforecast",
       "applicationUrl": "https://localhost:7145;http://localhost:5103",
       "environmentVariables": {
