--- a/RestaurantAPI/RestaurantAPI/nlog.config
+++ b/RestaurantAPI/RestaurantAPI/nlog.config
@@ -15,6 +15,9 @@
     <!-- write logs to file  -->
     <target xsi:type="File" name="allfile" fileName="D:\REPOS\Kata2\allfile.log"
             layout="${longdate}|${event-properties:item=EventId_Id}|${uppercase:${level}}|${logger}|${message} ${exception:format=tostring}" />
+    
+    <target xsi:type="File" name="exceptions" fileName="D:\REPOS\Kata2\nlog-all-exceptions-${shortdate}.log"
+        layout="${longdate}|${event-properties:item=EventId_Id}|${uppercase:${level}}|${logger}|${message} ${exception:format=tostring}" />
 
   </targets>
 
@@ -22,6 +25,7 @@
   <rules>
     <!--All logs, including from Microsoft-->
     <logger name="*" minlevel="Trace" writeTo="allfile" />
+    <logger name="RestaurantAPI.*" minlevel="Error" writeTo="exceptions" />
 
   </rules>
 </nlog>
