--- a/RestaurantAPI/RestaurantAPI/nlog.config
+++ b/RestaurantAPI/RestaurantAPI/nlog.config
@@ -13,6 +13,9 @@
   <!-- the targets to write to -->
   <targets>
     <!-- write logs to file  -->
+    <target xsi:type="File" name="RequestTime" fileName="D:\REPOS\Kata2\RequestTime.log"
+        layout="${longdate}|${event-properties:item=EventId_Id}|${uppercase:${level}}|${logger}|${message} ${exception:format=tostring}" />
+    
     <target xsi:type="File" name="allfile" fileName="D:\REPOS\Kata2\allfile.log"
             layout="${longdate}|${event-properties:item=EventId_Id}|${uppercase:${level}}|${logger}|${message} ${exception:format=tostring}" />
     
@@ -26,6 +29,7 @@
     <!--All logs, including from Microsoft-->
     <logger name="*" minlevel="Trace" writeTo="allfile" />
     <logger name="RestaurantAPI.*" minlevel="Error" writeTo="exceptions" />
+    <logger name="RestaurantAPI.Middleware.RequestTimeMiddleware" minlevel="Trace" writeTo="RequestTime" />
 
   </rules>
 </nlog>
